--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (0.4.8) stable; urgency=low
+
+  * Mantis 0000671: Provide a built-in automatic pruning mechanism for the
+    CIFS/SMB recycle bin.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 21 Dec 2012 15:04:50 +0100
+
 openmediavault (0.4.7) stable; urgency=low
 
   * Update locales.
