--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -5,6 +5,7 @@ openmediavault (0.4.9) stable; urgency=low
     for notifications. Alert notifications can be disabled via the environment
     variables OMV_MONIT_SERVICE_SYSTEM_(MEMORYUSAGE|CPUUSAGE|LOADAVG)_ENABLE.
   * Mantis 0000677: A bit more functional network recycle bin.
+  * Mantis 0000679: Drives are not referenced correctly.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 23 Dec 2012 22:20:57 +0100
 
