--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (0.4.9) stable; urgency=low
 
+  * Update locales.
   * Fix access bug when a SMB/CIFS share is declared as public. Thanks to
     premudriy for the research and fix.
   * Mantis 0000675: Validate user-input in SMTP server.
