--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-22 03:12+0100\n"
-"PO-Revision-Date: 2012-12-22 02:12+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-12-22 05:22+0000\n"
+"Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/openmediavault/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -741,7 +741,7 @@ msgid "Delete content"
 msgstr "Удалить содержимое"
 
 msgid "Delete files"
-msgstr ""
+msgstr "Удалить файлы"
 
 msgid "Delete files on the receiving side that don't exist on sender"
 msgstr "Удалять файлы на стороне получателя, которые не существуют у отправителя"
@@ -1166,12 +1166,12 @@ msgstr "Файл"
 msgid ""
 "Files in the recycle bin will be deleted automatically after the specified "
 "number of days. Set to 0 for manual deletion."
-msgstr ""
+msgstr "Файлы в корзине, будут удалены автоматически после определенного количества дней. Установите 0 для ручного удаления."
 
 msgid ""
 "Files that are larger than the specified number of bytes will not be put "
 "into the recycle bin. Set to 0 for unrestricted file size."
-msgstr ""
+msgstr "Файлы, размер которых превышает указанное значение байт не будет удален в корзину. Установите 0 для неограниченного размера файла."
 
 msgid "Filesystem"
 msgstr "Файловая система"
@@ -1744,7 +1744,7 @@ msgid "Maximum download rate (KiB/s)"
 msgstr "Максимальная скорость загрузки (КБ/с)"
 
 msgid "Maximum file size"
-msgstr ""
+msgstr "Максимальный размер файла"
 
 msgid ""
 "Maximum idle time in seconds. Setting idle timeout to 0 disables the idle "
