--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-22 03:12+0100\n"
-"PO-Revision-Date: 2012-12-22 02:12+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-12-24 02:58+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/projects/p/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -736,7 +736,7 @@ msgid "Delete content"
 msgstr "刪除內容"
 
 msgid "Delete files"
-msgstr ""
+msgstr "刪除檔案"
 
 msgid "Delete files on the receiving side that don't exist on sender"
 msgstr "刪除在接收端但不存於發送端的檔案"
@@ -1161,12 +1161,12 @@ msgstr "檔案"
 msgid ""
 "Files in the recycle bin will be deleted automatically after the specified "
 "number of days. Set to 0 for manual deletion."
-msgstr ""
+msgstr "在回收桶內的檔案將會於所指定的天數後自動被刪除。設定為 0 來用手動刪除。"
 
 msgid ""
 "Files that are larger than the specified number of bytes will not be put "
 "into the recycle bin. Set to 0 for unrestricted file size."
-msgstr ""
+msgstr "檔案若其大小超過所指定的位元數，將不會被放進回收桶內。設定為 0 則不限制檔案大小。"
 
 msgid "Filesystem"
 msgstr "檔案系統"
@@ -1739,7 +1739,7 @@ msgid "Maximum download rate (KiB/s)"
 msgstr "最大下載速度 (KiB/s)"
 
 msgid "Maximum file size"
-msgstr ""
+msgstr "最大檔案大小"
 
 msgid ""
 "Maximum idle time in seconds. Setting idle timeout to 0 disables the idle "
