--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,8 +1,15 @@
+openmediavault (0.4.10) stable; urgency=low
+
+  * Mantis 0000681: Public shares in SMB/CIFS do not work.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 30 Dec 2012 16:19:52 +0100
+
 openmediavault (0.4.9) stable; urgency=low
 
   * Update locales.
   * Fix access bug when a SMB/CIFS share is declared as public. Thanks to
     premudriy for the research and fix.
+  * Mantis 0000630: NTFS partitions added as /dev/sdX in /etc/fstab.
   * Mantis 0000675: Validate user-input in SMTP server.
   * Mantis 0000676: Provide a way to change average system load thresholds
     for notifications. Alert notifications can be disabled via the environment
