--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (0.4.11) stable; urgency=low
+
+  * Mantis 0000683: On delete of "Shared Folders" it is too easy to remove
+    content, yes is the default.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 30 Dec 2012 19:48:30 +0100
+
 openmediavault (0.4.10) stable; urgency=low
 
   * Mantis 0000681: Public shares in SMB/CIFS do not work.
