--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -5,6 +5,7 @@ openmediavault (0.4.12) stable; urgency=low
     has been modified.
   * Make gateway field in the bond interface configuration dialogs optional.
   * Send emails from user root to the primary email recipient.
+  * Add generic support to get S.M.A.R.T. attributes from USB devices.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 04 Jan 2013 04:58:32 +0100
 
