--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (0.4.18) stable; urgency=low
+
+  * Enable 'Close' button in ExecCmdDialog if the 'Stop' RPC fails.
+  * Use udev to retrieve various device informations.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 02 Feb 2013 12:56:19 +0100
+
 openmediavault (0.4.17) stable; urgency=low
 
   * Update locales.
