--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (0.4.18) stable; urgency=low
 
   * Enable 'Close' button in ExecCmdDialog if the 'Stop' RPC fails.
   * Use udev to retrieve various device informations.
+  * Prohibit various characters in comments.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 02 Feb 2013 12:56:19 +0100
 
