--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.4.19) stable; urgency=low
+
+  * Fix bug Samba recycle dir config script. Set missing executable bit.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 08 Feb 2013 22:30:48 +0100
+
 openmediavault (0.4.18) stable; urgency=low
 
   * Update locales.
