--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-01 18:27+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-08 21:27+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2011,7 +2011,7 @@ msgid "Online"
 msgstr "Online"
 
 msgid "Operation not allowed for user '%s'."
-msgstr ""
+msgstr "Operación no permitida al usuario '%s'."
 
 msgid "Options"
 msgstr "Opciones"
@@ -2991,7 +2991,7 @@ msgstr "Nombre del servicio."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
-msgstr ""
+msgstr "Duración de la sesión en minutos. seleccionar \"0\" para deshabilitar el logout automático."
 
 msgid "The shared folder is already used by another share"
 msgstr "La carpeta compartida ya está siendo usada por otra compartición."
