--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-01 18:28+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-05 22:44+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/projects/p/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2010,7 +2010,7 @@ msgid "Online"
 msgstr "在線"
 
 msgid "Operation not allowed for user '%s'."
-msgstr ""
+msgstr "不允許用戶 '%s' 執行此作業。"
 
 msgid "Options"
 msgstr "選項"
@@ -2990,7 +2990,7 @@ msgstr "服務名稱。"
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
-msgstr ""
+msgstr "作業階段的逾時時間，以分鐘為單位。設定為 0 來停用自動登出。"
 
 msgid "The shared folder is already used by another share"
 msgstr "共享檔案夾已被另一個共享使用"
