--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault-netatalk (0.4.3) stable; urgency=low
 
   * Update locales.
+  * Fix bug in AFP::getShare RPC.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 10 Feb 2013 00:05:56 +0100
 
