--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/da_DA/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/da_DA/openmediavault-netatalk.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Stefan Thrane Overby <stoverby@gmail.com>, 2012.
+# Stefan Thrane Overby <stoverby@gmail.com>, 2012-2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-10 00:15+0100\n"
-"PO-Revision-Date: 2013-02-09 23:15+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-10 20:41+0000\n"
+"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,22 +19,22 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid " "
-msgstr ""
+msgstr " "
 
 msgid "Add share"
 msgstr "Tilføj delt mappe"
 
 msgid "Advanced settings"
-msgstr ""
+msgstr "Advanceret indstillinger"
 
 msgid "Advertise this service via mDNS/DNS-SD."
 msgstr "Annoncer denne tjeneste over mDNS/DNS-SD."
 
 msgid "Allow guest login."
-msgstr ""
+msgstr "Tillad gæste log ind"
 
 msgid "Allow guests to create or modify files."
-msgstr ""
+msgstr "Tillad at gæster opretter og ændre filer"
 
 msgid "Allow logins with passwords transmitted in the clear."
 msgstr "Tillad at log ind med adgangskode bliver overført åbent. "
@@ -85,10 +85,10 @@ msgid "General settings"
 msgstr "Generelle indstillinger"
 
 msgid "Guest login"
-msgstr ""
+msgstr "Gæste log ind"
 
 msgid "Guests only have read access by default."
-msgstr ""
+msgstr "Gæster har kun som standard læseadgang"
 
 msgid "Hide dot files"
 msgstr "Gem dot filer"
