--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,8 +1,14 @@
+openmediavault (0.4.20) stable; urgency=low
+
+  * Add OMVFilesystem::getParentDeviceFile() method.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 15 Feb 2013 13:41:47 +0100
+
 openmediavault (0.4.19) stable; urgency=low
 
   * Update locales.
   * Restrict various comment fields in WebGUI.
-  * Fix bug Samba recycle dir config script. Set missing executable bit.
+  * Fix bug in Samba recycle dir config script. Set missing executable bit.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 08 Feb 2013 22:30:48 +0100
 
