--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (0.4.20) stable; urgency=low
 
   * Add OMVFilesystem::getParentDeviceFile() method.
+  * Add omv_set_default script helper function.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 15 Feb 2013 13:41:47 +0100
 
