--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (0.4.33) stable; urgency=low
+
+  * Add omv-release-upgrade command to easily upgrade to the latest release
+    version.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 18 Jun 2013 20:14:03 +0200
+
 openmediavault (0.4.32) stable; urgency=low
 
   * Close login dialog on success.
