--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (0.4.33) stable; urgency=low
 
+  * Various improvements and bugfixes.
   * Disable 'Action done' messages send by Monit.
   * Add omv-release-upgrade command to easily upgrade to the latest release
     version.
