--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (0.4.34) stable; urgency=low
+
+  * Display a information dialog after the RAID has been created.
+  * Backup configuration before release upgrade.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 07 Jul 2013 21:41:07 +0200
+
 openmediavault (0.4.33) stable; urgency=low
 
   * Various improvements and bugfixes.
