--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.4.36) stable; urgency=low
+
+  * Mantis 0000795: LDAP User error.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Jul 2013 09:27:10 +0200
+
 openmediavault (0.4.35) stable; urgency=low
 
   * Modify message in release upgrade script.
