--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (0.4.38) stable; urgency=low
 
   * Mantis 0000842: NFS duplicate export entries.
+  * Mantis 0000856: Security: Directory Traversal rrd.php.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 19 Sep 2013 23:26:20 +0200
 
