--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.5.42) stable; urgency=low
+
+  * Allow prelogin message customizing.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 23 Mar 2014 12:53:16 +0100
+
 openmediavault (0.5.41) stable; urgency=low
 
   * Update locales.
