--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-usbbackup (0.5.9) stable; urgency=low
+
+  * Update locales.
+  * Add support for eSATA devices. Thanks to Toni Guepin for this feature.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 27 Mar 2014 19:28:02 +0100
+
 openmediavault-usbbackup (0.5.8) stable; urgency=low
 
   * Update locales.
