--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.5.43) stable; urgency=low
+
+  * Fix issue when changing hostname and FTP is enabled.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 28 Mar 2014 12:11:46 +0100
+
 openmediavault (0.5.42) stable; urgency=low
 
   * Allow prelogin message customizing.
