--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (0.5.44) stable; urgency=low
+
+  * Mantis 0001017: Notification settings - test-email not sent to second
+    email-address.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 02 Apr 2014 12:08:55 +0200
+
 openmediavault (0.5.43) stable; urgency=low
 
   * Fix issues when changing hostname.
