--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (0.5.44) stable; urgency=low
 
+  * Update locales.
   * Mantis 0001017: Notification settings - test-email not sent to second
     email-address.
   * Mantis 0001022: Unable to add user with "'" symbol in password.
