--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.5.45) stable; urgency=low
+
+  * Mantis 0001024: ACL dialog treeview does not complete.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 11 Apr 2014 20:44:25 +0200
+
 openmediavault (0.5.44) stable; urgency=low
 
   * Update locales.
