--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.5.46) stable; urgency=low
+
+  * Various code improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 24 Apr 2014 07:23:46 +0200
+
 openmediavault (0.5.45) stable; urgency=low
 
   * Fix bug in the WebGUI shared folder combobox control.
