--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,8 @@
 openmediavault (0.5.46) stable; urgency=low
 
   * Various code improvements.
+  * Display the 'Information | About' page after user login.
+  * Improve 'openmediavault' PAM configuration.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 24 Apr 2014 07:23:46 +0200
 
