--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.5.48) stable; urgency=low
+
+  * Fix file permission of database backups.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 14 May 2014 12:18:59 +0200
+
 openmediavault (0.5.47) stable; urgency=low
 
   * Various code improvements and bug fixes.
