--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.0.3) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 17 Mar 2015 09:08:29 +0100
+
 openmediavault (2.0.2) stable; urgency=low
 
   * Update locales.
@@ -16,6 +22,12 @@ openmediavault (2.0) stable; urgency=low
   * Adapt WebGUI to Sencha ExtJS 5.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Feb 2015 09:50:29 +0100
+
+openmediavault (1.16) stable; urgency=low
+
+  * Restart cron daemon after changing system time.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 17 Mar 2015 09:01:49 +0100
 
 openmediavault (1.15) stable; urgency=low
 
