--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -26,6 +26,8 @@ openmediavault (2.0) stable; urgency=low
 openmediavault (1.16) stable; urgency=low
 
   * Restart cron daemon after changing system time.
+  * Mantis 0001282: OMV.form.plugin.LinkedFields is not working in some
+    special use cases.
   * Mantis 0001283: Recreate /var/cache/openmediavault/packages when file is
     missing instead of causing error.
 
