--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-usbbackup (1.3) stable; urgency=low
+
+  * Mantis 0001284: Use OMVFilesystems backend to support additional
+    filesystems.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 19 Mar 2015 14:38:29 +0100
+
 openmediavault-usbbackup (1.2) stable; urgency=low
 
   * Update locales.
