--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,15 @@
+openmediavault-shairport (1.5) stable; urgency=low
+
+  * Adapt plugin to shairport-sync.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 22 Mar 2015 10:59:13 +0100
+
+openmediavault-shairport (1.4) stable; urgency=low
+
+  * Improve package postrm script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 22 Mar 2015 11:15:50 +0100
+
 openmediavault-shairport (1.3) stable; urgency=low
 
   * Update locales.
