--- a/deb/openmediavault-owncloud/debian/changelog
+++ b/deb/openmediavault-owncloud/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-owncloud (2.0.3) stable; urgency=low
+
+  * Update locales.
+  * Fix bug in debian/postrm script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 06 Jul 2015 23:07:24 +0200
+
 openmediavault-owncloud (2.0.2) stable; urgency=low
 
   * Update locales.
