--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (3.2) stable; urgency=low
+
+  * Adapt plugin to netatalk 3.1.9.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 23 Sep 2016 22:10:11 +0200
+
 openmediavault-netatalk (3.1) stable; urgency=low
 
   * Update locales.
