--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.2.9) stable; urgency=low
+
+  * Fix issue in omv-release-upgrade.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 24 Sep 2016 13:13:44 +0200
+
 openmediavault (2.2.8) stable; urgency=low
 
   * Various improvements.
