--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-08-22 20:48+0200\n"
-"PO-Revision-Date: 2016-10-03 17:56+0000\n"
-"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
+"POT-Creation-Date: 2016-10-03 20:38+0200\n"
+"PO-Revision-Date: 2016-10-03 18:38+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3080,7 +3080,7 @@ msgid ""
 "Source address can be either a network IP address (with /mask), a IP range "
 "or a plain IP address. A '!' argument before the address specification "
 "inverts the sense of the address."
-msgstr "Zdrojová adresa může být zapsána jako adresa podsítě (s /maskou), rozsah IP adres nebo jedna IP adresa. Vykřičník před adresou znamená inverzi významu."
+msgstr "Zdrojová adresa může být zapsána jako adresa podsítě (s /maskou), rozsah IP adres nebo jedna IP adresa. Vykřičník před adresou znamená převrácení významu."
 
 msgid "Source port"
 msgstr "Zdrojový port"
@@ -3107,24 +3107,24 @@ msgid "Special action flag"
 msgstr "Příznak zvláštní akce"
 
 msgid "Specifies how many server threads to create."
-msgstr "Určuje, kolik vláken serveru vytvořit."
+msgstr "Určuje kolik vláken serveru vytvořit."
 
 msgid "Specifies one of the bonding policies."
-msgstr "Určuje jedno z pravidel spřažení."
+msgstr "Určuje jednu ze zásad spřažení."
 
 msgid "Specifies the MII link monitoring frequency in milliseconds."
-msgstr "Určuje četnost hlídání rozhraní MII v milisekundách."
+msgstr "Určuje četnost hlídání rozhraní MII (v milisekundách)."
 
 msgid ""
 "Specifies the amount of time, in seconds, between checking and updating the "
 "masquerade address by resolving the IP address. Set this value to 0 to "
 "disable this option."
-msgstr "Určuje časové rozmezí jednotlivých zjišťování a aktualizací vnější veřejné IP adresy (dotazem do jmenné služby DNS), na které probíhá překlad na vnitřní, neveřejné (NAT). Pokud se adresa nemění, můžete toto zjišťování vypnout nastavením na 0 (nula)."
+msgstr "Určuje časové rozmezí (v sekundách) jednotlivých zjišťování a aktualizací vnější veřejné IP adresy (dotazem do jmenné služby DNS), na které probíhá překlad na vnitřní, neveřejné (NAT). Pokud se adresa nemění, můžete toto zjišťování vypnout nastavením na 0 (nula)."
 
 msgid ""
 "Specifies the maximum permitted block size. The permitted range for this "
 "parameter is from 512 to 65464."
-msgstr "Určuje nejvyšší možnou velikost bloku. Ta může nabývat hodnot z rozsahu 512 až 65464."
+msgstr "Určuje nejvyšší umožněnou velikost bloku. Ta může nabývat hodnot z rozsahu 512 až 65464."
 
 msgid "Specifies the time in hh:mm:ss after which the ban expires."
 msgstr "Určuje lhůtu (ve formátu hh:mm:ss), po jejímž uplynutí skončí platnost vyloučení."
