--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-usbbackup (3.2.12) stable; urgency=low
+
+  * Fix various issues.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 07 Oct 2016 08:32:17 +0200
+
 openmediavault-usbbackup (3.2.11) stable; urgency=low
 
   * Update locales.
