--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (2.2.11) stable; urgency=low
 
   * Mantis 0001610: omv_escapeshellarg truncates path after space.
+  * Fix bug in the FileSystemMgmt::create RPC.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 04 Oct 2016 23:39:17 +0200
 
