--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (3.0.43) stable; urgency=low
 
-  * 
+  * Various improvements and bugfixes.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 06 Oct 2016 11:19:36 +0200
 
