--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.1.14-1) stable; urgency=low
+
+  * Issue #206: Fix cron job to update SMART database.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 12 Nov 2018 13:31:00 +0100
+
 openmediavault (4.1.13-1) stable; urgency=low
 
   * Update locales.
