--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -16,13 +16,18 @@ openmediavault (5.0-1) unstable; urgency=low
   * Issue #93: Use chrony instead of ntpd.
   * Issue #146: Use systemd to configure the network.
   * Issue #266: Remember size and position of windows.
-  * Issue #270: Ensure smartctl command is not executed in parallel. 
   * Add options 'Group' and 'Owner' to rsync settings. If the 'Archive' option
     is enabled and one of its implied option 'Recursive',
     'Preserve permissions', 'Times', 'Group' or 'Owner' is disabled, then this
     option will be prefixed with '--no-xxx' in the rsync command line.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
+
+openmediavault (4.1.18-1) stable; urgency=low
+
+  * Issue #270: Ensure smartctl command is not executed in parallel.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 19 Jan 2019 15:52:14 +0100
 
 openmediavault (4.1.17-1) stable; urgency=low
 
