--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -24,6 +24,13 @@ openmediavault (5.0-1) unstable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
 
+openmediavault (4.1.19-1) stable; urgency=low
+
+  * Add the ability to execute RPC code in parallel.
+  * Parallelize S.M.A.R.T. data collection.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 05 Feb 2019 22:25:08 +0100
+
 openmediavault (4.1.18-2) stable; urgency=low
 
   * Fix bug in \OMV\Mutex class.
